# gear.exe-dapps

./: .gitignore  README.md  main.py  out
.github/workflows/: CI-CD-Distributed-Computation-fe.yml  CI-CD_digit-recognition-frontend.yaml  docker-image.yml
arbitrum-nitro/tests/: integration_tests.rs
arkanoid/arbitrum-nitro/: Cargo.toml
arkanoid/arbitrum-nitro/scripts/: simulateGame.sh
arkanoid/arbitrum-nitro/src/: lib.rs
arkanoid/gear/: .binpath  Cargo.toml  README.md  build.rs
arkanoid/gear/app/: Cargo.toml
arkanoid/gear/app/src/: game.rs  lib.rs
arkanoid/gear/client/: Cargo.toml
arkanoid/gear/client/src/: lib.rs
arkanoid/gear/src/: lib.rs
arkanoid/gear/tests/: gtest.rs
arkanoid/solidity/: hardhat.config.ts
arkanoid/solidity/contracts/: ArkanoidSim.sol
arkanoid/solidity/test/: ArkanoidSimTest.js
cnn-cats-dogs/: .binpath  Cargo.toml  README.md  build.rs  pixels.json
cnn-cats-dogs/app/: Cargo.toml
cnn-cats-dogs/app/src/: lib.rs  model.rs  model_constants.rs
cnn-cats-dogs/client/: Cargo.toml  build.rs
cnn-cats-dogs/client/src/: lib.rs
cnn-cats-dogs/rpc/: Cargo.toml  checkers.txt
cnn-cats-dogs/rpc/src/: main.rs
cnn-cats-dogs/src/: lib.rs
cnn-cats-dogs/tests/: gtest.rs
digit-recognition/: .binpath  Cargo.toml  README.md  build.rs  mnist_array.txt
digit-recognition/app/: Cargo.toml
digit-recognition/app/src/: lib.rs  tensor_funcs.rs  weights_and_biases.rs
digit-recognition/client/: Cargo.toml  build.rs
digit-recognition/client/src/: lib.rs
digit-recognition/frontend/: .env.example  Dockerfile  README.md  index.html  package.json  vite.config.ts
digit-recognition/frontend/src/: App.module.scss  App.tsx  consts.ts  index.css  main.tsx  providers.tsx
digit-recognition/frontend/src/components/: index.ts
digit-recognition/frontend/src/components/header/: Header.module.scss  Header.tsx
digit-recognition/frontend/src/components/layout/: Layout.module.scss  Layout.tsx
digit-recognition/frontend/src/components/recognition/: Recognition.module.scss  Recognition.tsx
digit-recognition/frontend/src/components/ui/button/: Button.module.scss  Button.tsx
digit-recognition/frontend/src/components/ui/card/: Card.module.scss  Card.tsx
digit-recognition/frontend/src/components/ui/hashLink/: HashLink.module.scss  HashLink.tsx
digit-recognition/frontend/src/components/ui/image-crop/: image-crop.module.scss  image-crop.tsx  index.ts
digit-recognition/frontend/src/components/ui/modal/: modal.module.scss  modal.tsx
digit-recognition/frontend/src/components/wallet/: WalletButton.module.scss  WalletButton.tsx
digit-recognition/frontend/src/features/: index.ts
digit-recognition/frontend/src/features/cat-dog-identifier/: CatDogIdentifier.module.scss  CatDogIdentifier.tsx  consts.ts  utils.ts
digit-recognition/frontend/src/features/cat-dog-identifier/api/: readRpcState.ts  useCatsDogsPredictPredict.ts
digit-recognition/frontend/src/features/cat-identifier/: CatIdentifier.module.scss  CatIdentifier.tsx  types.ts
digit-recognition/frontend/src/features/cat-identifier/api/: catDogIdentifierAbi.ts  mirrorAbi.ts  readRpcState.ts  useCatsPredictPredict.ts
digit-recognition/frontend/src/features/digit-recognizer/: DigitCanvas.module.scss  DigitCanvas.tsx  DigitRecognizer.module.scss  DigitRecognizer.tsx  types.ts  utils.ts
digit-recognition/frontend/src/features/digit-recognizer/api/: DigitRecognitionAbi.ts  mirrorAbi.ts  readRpcState.ts  useDigitRecognitionPredict.ts
digit-recognition/frontend/src/lib/: types.ts
digit-recognition/frontend/src/lib/hooks/: use-scramble-text.ts
digit-recognition/frontend/src/lib/utils/: get-cropped-image.ts  index.ts  retry-while-data-changed.ts
digit-recognition/src/: lib.rs
digit-recognition/tests/: main.rs
gear/app/src/: game.rs
gear/client/: Cargo.toml  build.rs
gear/tests/: gtest.rs
manager/: Cargo.toml
manager/app/: Cargo.toml
manager/app/src/: lib.rs
manager/tests/: gtest.rs
mandelbrot-checker/: Cargo.toml
mandelbrot-checker/app/: Cargo.toml
mandelbrot-checker/app/src/: lib.rs
mandelbrot-checker/tests/: gtest.rs
mandelbrot-set/: Cargo.toml  README.md
mandelbrot-set/frontend/: .env.example  Dockerfile  README.md  index.html  package.json  tailwind.config.js
mandelbrot-set/frontend/src/: App.tsx  consts.ts  globals.css  index.css  main.tsx  providers.tsx
mandelbrot-set/frontend/src/api/: lib.ts  manager.idl  readRpcState.ts  sails.ts
mandelbrot-set/frontend/src/assets/: abi.ts
mandelbrot-set/frontend/src/components/: index.ts
mandelbrot-set/frontend/src/components/bricks/: Bricks.tsx  consts.ts  index.ts  types.ts  utils.ts
mandelbrot-set/frontend/src/components/canvas/: Canvas.tsx
mandelbrot-set/frontend/src/components/computation-form/: ComputationForm.tsx
mandelbrot-set/frontend/src/components/header/: Header.tsx
mandelbrot-set/frontend/src/components/layout/: Layout.tsx
mandelbrot-set/frontend/src/components/state-preview/: StatePreview.tsx
mandelbrot-set/frontend/src/components/ui/: Button.tsx  EncryptButton.tsx  HashLink.tsx  Input.tsx  Modal.tsx
mandelbrot-set/frontend/src/components/wallet/: WalletButton.tsx
mandelbrot-set/frontend/src/lib/hooks/: use-device-detect.ts
mandelbrot-set/frontend/src/lib/utils/: index.ts
mandelbrot-set/manager/app/: Cargo.toml
mandelbrot-set/manager/app/src/: lib.rs
mandelbrot-set/manager/client/: Cargo.toml
mandelbrot-set/manager/tests/: gtest.rs  node.rs
mandelbrot-set/mandelbrot-checker/: Cargo.toml
mandelbrot-set/mandelbrot-checker/app/: Cargo.toml
mandelbrot-set/mandelbrot-checker/app/src/: lib.rs
mandelbrot-set/mandelbrot-checker/client/: Cargo.toml
mandelbrot-set/mandelbrot-checker/tests/: gtest.rs
mandelbrot-set/rpc/: .gitignore  Cargo.toml
mandelbrot-set/rpc/src/: main.rs
rpc/: Cargo.toml  checked_points.txt  checkers.txt  out
rpc/src/: main.rs
solidity/: package-lock.json  package.json
solidity/contracts/: ArkanoidSim.sol
solidity/test/: ArkanoidSimTest.js
