[workspace]

members = ["client", "rpc"]


[package]
name = "cnn-cats-dogs"
version = "0.1.0"
edition = "2021"

[dependencies]
cnn-cats-dogs-app = { path = "app" }

[build-dependencies]
cnn-cats-dogs-app = { path = "app" }
sails-rs = { path = "../../sails/rs", features = ["wasm-builder", "ethexe"] }
sails-idl-gen = { path = "../../sails/rs/idl-gen" }

[dev-dependencies]
cnn-cats-dogs = { path = ".", features = ["wasm-binary"] }
cnn-cats-dogs-client = { path = "client" }
sails-rs =  { path = "../../sails/rs", features = ["gtest"] }
tokio = { version = "1.41", features = ["rt", "macros"] }
image = "0.24.6"
ndarray = "0.16.1"
rust_decimal = { version = "1.36.0", default-features = false, features = ["maths"] }
rust_decimal_macros = { version = "1.36.0" }
serde_json = "1.0"
hex = "0.4.3"

[features]
wasm-binary = []
