[workspace]

members = ["client", "rpc"]


[package]
name = "cnn-cats-dogs"
version = "0.1.0"
edition = "2021"

[dependencies]
cnn-cats-dogs-app = { path = "app" }

[build-dependencies]
cnn-cats-dogs-app = { path = "app" }
sails-rs = { version = "0.6.3", features = ["wasm-builder", "ethexe"] }
sails-idl-gen = "0.6.3"

[dev-dependencies]
cnn-cats-dogs = { path = ".", features = ["wasm-binary"] }
cnn-cats-dogs-client = { path = "client" }
sails-rs =  { version = "0.6.3", features = ["gtest"] }
tokio = { version = "1.41", features = ["rt", "macros"] }
image = "0.24.6"
ndarray = "0.16.1"
rust_decimal = { version = "1.36.0", default-features = false, features = ["maths"] }
rust_decimal_macros = { version = "1.36.0" }
serde_json = "1.0"
hex = "0.4.3"

[features]
wasm-binary = []
