[package]
name = "cnn-cats-dogs-app"
version = "0.1.0"
edition = "2021"

[dependencies]
sails-rs =  { path = "../../../sails/rs", features = ["debug", "ethexe"] }
rust_decimal = { version = "1.36.0", default-features = false, features = ["maths"] }
parity-scale-codec = { version = "3.6", default-features = false }
scale-info = { version = "2.11", default-features = false }
ndarray = { version = "0.16.1", default-features = false }
