[package]
name = "cnn-cats-dogs-client"
version = "0.1.0"
edition = "2021"

[dependencies]
mockall = { version = "0.12", optional = true }
sails-rs = "0.6.3"

[build-dependencies]
cnn-cats-dogs-app = { path = "../app" }
sails-client-gen = "0.6.3"
sails-idl-gen = "0.6.3"

[features]
mocks = ["sails-rs/mockall", "dep:mockall"]
