[package]
name = "manager-app"
version = "0.1.0"
edition = "2021"

[dependencies]
sails-rs = { version = "=0.6.1", features = ["debug"] }
rust_decimal = { version = "1.36.0", default-features = false }
rust_decimal_macros = "1.36.0"
mandelbrot-checker-client = { path = "../../mandelbrot-checker/client" }
gstd = "=1.6.2"