[package]
name = "rpc-gear-exe"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
parity-scale-codec = { version = "3.6", default-features = false }
scale-info = { version = "2.11", default-features = false }
primitive-types = { version = "0.12", default-features = false }
parity-scale-codec-derive = "3.6.12"
sails-rs = { version = "=0.6.1", features = ["debug", "ethexe"] }
manager-client = { path = "../manager/client" }
hex = { version = "0.4.3", default-features = false }
hex-literal = "0.4.1"
image = "0.25.4"